defining functions to load data and read messages for each friend

--- a/mooc/U4/app/static/home.html
+++ b/mooc/U4/app/static/home.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="container">
-            <a href="/">SocNet</a> | <a href="home">Home</a> | <a href="login">Log In</a> | <a href="signup">Sign Up</a> | <a href="readuserfriends">Friends</a>
+            <a href="/">SocNet</a> | <a href="home">Home</a> | <a href="login">Log In</a> | <a href="signup">Sign Up</a> | <a href="showmessages">Friends</a>
             <h1>Hi, How are you?</h1>
             <div>
                 <form action="processHome" method="post" name="home">
