--- a/mooc/U4/app/static/index.html
+++ b/mooc/U4/app/static/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="container">
-            <a href="/">SocNet | <a href="home">Home | <a href="login">Log In | <a href="signup">Sign Up </a> | <a href="readuserfriends">Friends</a>
+            <a href="/">SocNet | <a href="home">Home | <a href="login">Log In | <a href="signup">Sign Up </a> | <a href="showmessages">Friends</a>
             <h1>Hi, Welcome to the SocNet</h1>
             <div>
                 <p>Choose <b>Sign Up</b> if you are a new user</p>
