--- a/mooc/U4/app/static/readuserdata.html
+++ b/mooc/U4/app/static/readuserdata.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <div id="container">
-            <a href="/">SocNet</a> | <a href="home">Home</a> | <a href="login">Log In</a> | <a href="signup">Sign Up</a> | <a href="readuserfriends">Friends</a>
+            <a href="/">SocNet</a> | <a href="home">Home</a> | <a href="login">Log In</a> | <a href="signup">Sign Up</a> | <a href="showmessages">Friends</a>
             <h1>Who's your fucking friend?</h1>
-            <form action="readuserfriends" method="post" name="readuserfriends">
+            <form action="showmessages" method="post" name="showmessages">
                 <label for="email">Email</label>
 				<div class="inputs">
                     <input id="email" name="email"  placeholder="Email" size="80" type="text" value=""/>
