--- a/mooc/U4/app/static/login.html
+++ b/mooc/U4/app/static/login.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="container">
-            <a href="/">SocNet</a> | <a href="home">Home</a> | <a href="login">Log In</a> | <a href="signup">Sign Up</a> | <a href="readuserfriends">Friends</a>
+            <a href="/">SocNet</a> | <a href="home">Home</a> | <a href="login">Log In</a> | <a href="signup">Sign Up</a> | <a href="showmessages">Friends</a>
             <h1>Log In</h1>
             <form action="login" method="post" name="login">
                 <label for="email">Email</label>
