--- a/mooc/U4/app/static/signup.html
+++ b/mooc/U4/app/static/signup.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="container">
-            <a href="/">SocNet</a> | <a href="home">Home</a> | <a href="login">Log In</a> | <a href="signup">Sign Up</a> | <a href="readuserfriends">Friends</a>
+            <a href="/">SocNet</a> | <a href="home">Home</a> | <a href="login">Log In</a> | <a href="signup">Sign Up</a> | <a href="showmessages">Friends</a>
             <h1>Sign Up</h1>
             <form action="processSignup" method="post" name="signup">
                 <label for="nickname">Nickname</label>
