Adding validations to home and signup

--- a/mooc/U6/app/static/signup.html
+++ b/mooc/U6/app/static/signup.html
@@ -6,7 +6,7 @@
         <title>
             Sign Up - SocNet
         </title>
-        <script src = "static/js/validateProfile.js"></script>
+        <script src = "static/js/validateSignup.js"></script>
         <script>   
 
             // function mostrarAtributoValue() {
@@ -33,7 +33,7 @@
             <h1>
                 Sign Up
             </h1>
-            <form action="signup" method="post" name="signup" onsubmit="return validateProfile(this)">
+            <form action="signup" method="post" name="signup" onsubmit="return validateSignup(this)">
                 <label for="nickname">
                         Nickname
                 </label>
